--- a/myapp/views/secret.ejs
+++ b/myapp/views/secret.ejs
@@ -16,11 +16,11 @@
         <div class="panel-body">
             <div class="form-group">
                 <label for="recipient-name" class="control-label">待加密文件路径，带文件名:</label>
-                <input type="text" class="form-control" id="surEncryption" value="/file/test.txt" disabled>
+                <input type="file" id="surEncryption" webkitdirectory>
             </div>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">加密后文件保存路径，带文件名:</label>
-                <input type="text" class="form-control" id="encryption" value="/file/test.txt" disabled>
+                <input type="text" class="form-control" id="encryption" value="C:\Users\shenqian\Desktop\tset" disabled>
             </div>
             <div class="form-group">
                 <button type="button" class="btn btn-primary" onclick="EncryptFile()">对称加密</button>
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">解密后文件保存路径，带文件名:</label>
-                <input type="text" class="form-control" id="decryptedFiles" value="/file/test.txt" disabled>
+                <input type="text" class="form-control" id="decryptedFiles" value="/file/test" disabled>
             </div>
             <div class="form-group">
                 <button type="button" class="btn btn-primary" onclick="DevryptFile()">对称解密</button>
@@ -165,6 +165,7 @@
 <script>
     //3.2.1.6.对称加密接口
     function EncryptFile(){
+        console.log($("#surEncryption").val());
         $.ajax({
             url:commonUrl+"/RS_EncryptFile",
             type:"post",
